--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ baseURL = "/"
 publishDir = "public"
 
 # Remote
-#baseURL = "https://caressofsteel.github.io/demos/hugo/hugo-story/"
+baseURL = "https://djmonkeyuk.github.io/website/"
 #publishDir = "//centos/sites/hugodev/hugostory/"
 
 
