--- a/data/tftdm_banner.yml
+++ b/data/tftdm_banner.yml
@@ -9,6 +9,6 @@ content : |
 button:
   label : "Wishlist/Buy Steam Page"
   link : "https://store.steampowered.com/app/1782420/Tales_from_The_Dancing_Moon/"
-image : "images/tftdm/banner.png"
+image : "/website/images/tftdm/banner.png"
 # video : "Xes1Yo-vPeM"
 
