--- a/data/tftdm_banner.yml
+++ b/data/tftdm_banner.yml
@@ -4,7 +4,7 @@ title : ""
 subtitle: |
 
 content : |
-  <img src="/website/images/tftdm/tftdm_logo.png" width=100% />
+  <img src="images/tftdm/tftdm_logo.png" width=100% />
   <p>Tales from the Dancing Moon is a life-sim RPG set in a parallel universe inspired by UK culture and fantasy novels. After the events of a shadow-beast invasion on a seaside town, complete villager quests and collect hidden diaries to understand your role in this mysterious character-driven story.</p>
 button:
   label : "Wishlist/Buy Steam Page"
