--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -12,7 +12,7 @@ relativeURLs = "true"
 canonifyURLs = "true"
 
 # Local
-baseURL = "https://djmonkeyuk.github.io/website/"
+baseURL = "/"
 publishDir = "public"
 
 # Remote
