--- a/data/tftdm_facts.yml
+++ b/data/tftdm_facts.yml
@@ -21,7 +21,7 @@ left_content: |
 
   <p>
   <b>Website:</b><br />
-  <a href="dancingmoongame.wordpress.com" target="_blank">dancingmoongame.wordpress.com</a>
+  <a href="https://djmonkeyuk.github.io/website/" target="_blank">https://djmonkeyuk.github.io/website/</a>
   </p>
 
   <p>
