--- a/data/tftdm_gameplay.yml
+++ b/data/tftdm_gameplay.yml
@@ -26,7 +26,7 @@ content : |
   <li>Photo mode with many lens and filter options!</li>
   </ul>
 
-image : "/website/images/gallery/fulls/Fall.png"
+image : "../images/gallery/fulls/Fall.png"
 image_attach: fixed
 
 button:
