--- a/data/tftdm_facts.yml
+++ b/data/tftdm_facts.yml
@@ -1,5 +1,5 @@
 ####################### Columns #########################
-title: Press Kit
+title: Tales from The Dancing Moon Press Kit
 left_content: |
   <h2>Factsheet</h2>
   <p>
@@ -21,7 +21,7 @@ left_content: |
 
   <p>
   <b>Website:</b><br />
-  <a href="https://djmonkeyuk.github.io/website/" target="_blank">https://djmonkeyuk.github.io/website/</a>
+  <a href="https://djmonkeyuk.github.io/website/tales-from-the-dancing-moon" target="_blank">https://djmonkeyuk.github.io/website/tales-from-the-dancing-moon</a>
   </p>
 
   <p>
