added dark mode for game

--- a/data/tftdm_facts.yml
+++ b/data/tftdm_facts.yml
@@ -1,5 +1,7 @@
 ####################### Columns #########################
 title: Tales from The Dancing Moon Press Kit
+style: invert
+
 left_content: |
   <h2>Factsheet</h2>
   <p>
