--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "hugo-shortcode-gallery"]
+	path = hugo-shortcode-gallery
+	url = https://github.com/mfg92/hugo-shortcode-gallery.git
