--- a/hugo.yaml
+++ b/hugo.yaml
@@ -70,9 +70,9 @@ params:
       - name: "Tales from The Dancing Moon 💃🏻🌙"
         url: tales-from-the-dancing-moon
       - name: No Man's Sky Base Building App 🚀
-        url: nms-bba
+        url: no-mans-sky-base-builder-app
       - name: No Man's Sky Base Builder for Blender 🏗️
-        url: nms-bbb
+        url: no-mans-sky-base-builder-blender
 
 
   # home-info mode
